--- a/example/gateway/Cargo.toml
+++ b/example/gateway/Cargo.toml
@@ -7,8 +7,13 @@ edition = "2018"
 
 [dependencies]
 axum = "0.1.3"
+http = "0.2"
+http-body = "0.4"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.2"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tower = "0.4"
+tower-http = "*"
 
