--- a/example/gateway/Cargo.toml
+++ b/example/gateway/Cargo.toml
@@ -24,6 +24,8 @@ flate2 = "1.0.20"
 error-chain = "0.12.0"
 rust-crypto = "0.2.36"
 
+mysql_async = "0.25.0"
+
 [lib]
 name = "gateway"
 path = "src/lib.rs"
@@ -32,3 +34,6 @@ path = "src/lib.rs"
 name = "gateway_bin"
 path = "src/bin/gateway.rs"
 
+[[bin]]
+name = "test"
+path = "src/bin/test.rs"
