--- a/example/gateway/Cargo.toml
+++ b/example/gateway/Cargo.toml
@@ -24,7 +24,9 @@ flate2 = "1.0.20"
 error-chain = "0.12.0"
 rust-crypto = "0.2.36"
 
-mysql_async = "0.25.0"
+sqlx = { version = "0.5", features = [ "mysql", "runtime-async-std-native-tls" ] }
+async-std = { version = "1.6", features = [ "attributes" ] }
+mysql = "*"
 
 [lib]
 name = "gateway"
